--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,7 +18,7 @@
 
 <!-- Favicon -->
 <link href="/assets/profile.jpeg" rel="shortcut icon" />
-<link href="/assets/profile.jpeg" rel="apple-touch-icon-precomposed" />
+<link href="/assets/profile.jpg" rel="apple-touch-icon-precomposed" />
 <!-- Android Lolipop Theme Color -->
 <!-- <meta name="theme-color" content="#1464FB"> -->
 <title>{{ page.title }}</title>
