--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -61,7 +61,7 @@
 <script>
     window.onbeforeunload = function(){
         //刷新后页面自动回到顶部
-        document.documentElement.scrollTop = 0;  //ie下
+        document.documentElement.scrollTop = 0;  
         document.body.scrollTop = 0;  //非ie
     }
 </script>
